--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
     "description": "an idea sharing app",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "author": "Rome Ye",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.4",
+        "express": "^4.18.2",
+        "mongoose": "^8.1.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.19"
     }
 }
